<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>adamczak_moveit</name>
  <version>1.0.0</version>
  <description>TODO</description>
  <maintainer email="adamadamczak123@gmail.com">AAdamzcak</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <depend>launch_ros</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>adamczak_service</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_depend>moveit_core</build_depend>
<exec_depend>moveit_core</exec_depend>
<build_depend>moveit_ros_planning_interface</build_depend>
<exec_depend>moveit_ros_planning_interface</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
